<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:gravity="center">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/animal_finder"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:textSize="30sp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_score"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="30"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:textSize="50sp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@color/red"
        android:onClick="tryAgainClicked"
        android:text="@string/try_again" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/best_point"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tvBestPoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"/>


</LinearLayout>